Falta hacer Add, Edit o Delete cuando esta Filtrado

--- a/html/socios.html
+++ b/html/socios.html
@@ -83,7 +83,7 @@
                         aria-haspopup="true" aria-expanded="false">
                         Columna
                     </button>
-                    <div class="dropdown-menu">
+                    <div id="ddFilter"class="dropdown-menu">
                         <a class="dropdown-item" href="#">Pais</a>
                         <a class="dropdown-item" href="#">Ocupacion</a>
                     </div>
@@ -320,11 +320,6 @@
             </div>
         </div>
 
-        <!-- JS que corresponden a las tablas y funciones -->
-        <script type="text/javascript" src="../assest/json/data.js"></script>
-        <script type="text/javascript" src="../js/utils.js"></script>
-        <script type="text/javascript" src="../js/main.js"></script>
-
         <!-- JS que corresponde a Boostrap -->
         <script type="text/javascript" src="../js/jquery-3.5.1.slim.min.js"></script>
         <script type="text/javascript" src="../js/popper.min.js"></script>
@@ -334,6 +329,11 @@
 
         <!-- JS para Icons Social -->
         <script type="text/javascript" src="../js/docs.js"></script>
+
+        <!-- JS que corresponden a las tablas y funciones -->
+        <script type="text/javascript" src="../assest/json/data.js"></script>
+        <script type="text/javascript" src="../js/utils.js"></script>
+        <script type="text/javascript" src="../js/main.js"></script>
 </body>
 
 </html>
