--- a/html/socios.html
+++ b/html/socios.html
@@ -84,13 +84,14 @@
                         Columna
                     </button>
                     <div id="ddFilter"class="dropdown-menu">
+                        <a class="dropdown-item" href="#">Nombre</a>
                         <a class="dropdown-item" href="#">Pais</a>
                         <a class="dropdown-item" href="#">Ocupacion</a>
                     </div>
                 </div>
                 <div id="barSearch" class="col-12 col-sm-6 col-md-7 col-lg-8 filter-display-none">
                     <form class="form-inline">
-                        <input id="inputSearch" class="form-control col-sm-10 col-10" type="search" placeholder="Buscar por Pais"
+                        <input id="inputSearch" class="form-control col-sm-10 col-10" type="search" placeholder="Seleccione Columna"
                             aria-label="Buscar" autocomplete="off">
                         <a id="btnbarSearch" class="btn btn-light col-lg-1 col-sm-2 col-2" data-action="search">
                             <img src="../assest/images/search.svg" width="20" height="20" alt="Buscar"
