Revision de Codigo y Orden

--- a/html/cobradores.html
+++ b/html/cobradores.html
@@ -7,15 +7,16 @@
     <title>Sr Cobranza</title>
     <!-- CSS Boostrap -->
     <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/bootstrap4-toggle.min.css">
 
     <!-- CSS de los Icons Social -->
     <link rel="stylesheet" href="../css/font-awesome.css">
     <link rel="stylesheet" href="../css/docs.css">
     <link rel="stylesheet" href="../css/bootstrap-social.css">
-    <link rel="icon" href="../assest/images/fav-icon.png" type="image/png" />
 
     <!-- CSS Propio -->
     <link rel="stylesheet" href="../css/cusstom.css">
+    <link rel="stylesheet" href="../css/tablestyle.css">
 </head>
 
 <body>
@@ -147,10 +148,15 @@
         <script type="text/javascript" src="../js/popper.min.js"></script>
         <script type="text/javascript" src="../js/bootstrap.min.js"></script>
         <script type="text/javascript" src="../js/bootstrap.bundle.min.js"></script>
+        <script type="text/javascript" src="../js/bootstrap4-toggle.min.js"></script>
 
         <!-- JS para Icons Social -->
-        <script type="text/javascript" src="../js/jquery.js"></script>
         <script type="text/javascript" src="../js/docs.js"></script>
+
+        <!-- JS que corresponden a las tablas y funciones -->
+        <script type="text/javascript" src="../assest/json/data.js"></script>
+        <script type="text/javascript" src="../js/utils.js"></script>
+        <script type="text/javascript" src="../js/main.js"></script>
 </body>
 
 </html>
