--- a/html/socios.html
+++ b/html/socios.html
@@ -76,14 +76,15 @@
             <div class="row ">
                 <div class="col-6 col-sm-3 col-md-3 col-lg-2 aligne-items-center">
                     <span class="text-light">Filtros </span>
-                    <input id="btnOnOffSearch" type="checkbox" data-toggle="toggle" data-onstyle="success" data-offstyle="danger">
+                    <input id="btnOnOffSearch" type="checkbox" data-toggle="toggle" data-onstyle="success"
+                        data-offstyle="danger">
                 </div>
                 <div id="ddSearch" class="col-6 col-sm-3 col-md-2 col-lg-2 btn-group filter-display-none">
                     <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">
                         Columna
                     </button>
-                    <div id="ddFilter"class="dropdown-menu">
+                    <div id="ddFilter" class="dropdown-menu">
                         <a class="dropdown-item" href="#">Nombre</a>
                         <a class="dropdown-item" href="#">Pais</a>
                         <a class="dropdown-item" href="#">Ocupacion</a>
@@ -91,8 +92,8 @@
                 </div>
                 <div id="barSearch" class="col-12 col-sm-6 col-md-7 col-lg-8 filter-display-none">
                     <form class="form-inline">
-                        <input id="inputSearch" class="form-control col-sm-10 col-10" type="search" placeholder="Seleccione Columna"
-                            aria-label="Buscar" autocomplete="off">
+                        <input id="inputSearch" class="form-control col-sm-10 col-10" type="search"
+                            placeholder="Seleccione Columna" aria-label="Buscar" autocomplete="off">
                         <a id="btnbarSearch" class="btn btn-light col-lg-1 col-sm-2 col-2" data-action="search">
                             <img src="../assest/images/search.svg" width="20" height="20" alt="Buscar"
                                 data-action="search" title="Buscar Socio">
@@ -149,7 +150,8 @@
                             </div>
                             <div class="form-group">
                                 <label>Edad</label>
-                                <input type="number" min="0" step="10" id="edadA" class="form-control" required autocomplete="off">
+                                <input type="number" min="0" step="10" id="edadA" class="form-control" required
+                                    autocomplete="off">
                             </div>
                             <div class="form-group">
                                 <label>Ocupacion</label>
@@ -186,7 +188,8 @@
                             </div>
                             <div class="form-group">
                                 <label>Edad</label>
-                                <input type="number" min="0" step="10" id="edadE" class="form-control" required autocomplete="off">
+                                <input type="number" min="0" step="10" id="edadE" class="form-control" required
+                                    autocomplete="off">
                             </div>
                             <div class="form-group">
                                 <label>Ocupacion</label>
