--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
   <title>
     <%= htmlWebpackPlugin.options.title %>
   </title>
+  <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+
 </head>
 
 <body>
@@ -16,7 +18,8 @@
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
         Please enable it to continue.</strong>
   </noscript>
-  <div id="app"></div>
+  <div id="app">
+  </div>
   <!-- built files will be auto injected -->
 </body>
 
